source/parser/GenesysParser.output
Não terminais inúteis na gramática

    illegal


Terminais sem uso na gramática

    fVAL
    fEVAL
    fLENG
    ILLEGAL
    fRESUTIL
    fENTATRANK
    fNUMGR
    fATRGR


Regras inúteis na gramática

  114 illegal: ILLEGAL


Estado 0 conflitos: 1 de deslocamento/redução
Estado 5 conflitos: 55 de deslocamento/redução
Estado 35 conflitos: 55 de deslocamento/redução
Estado 54 conflitos: 1 de deslocamento/redução
Estado 55 conflitos: 55 de deslocamento/redução
Estado 79 conflitos: 3 de deslocamento/redução
Estado 80 conflitos: 1 de deslocamento/redução
Estado 81 conflitos: 1 de deslocamento/redução
Estado 82 conflitos: 1 de deslocamento/redução
Estado 83 conflitos: 1 de deslocamento/redução
Estado 84 conflitos: 1 de deslocamento/redução
Estado 85 conflitos: 1 de deslocamento/redução
Estado 86 conflitos: 1 de deslocamento/redução
Estado 87 conflitos: 1 de deslocamento/redução
Estado 88 conflitos: 1 de deslocamento/redução
Estado 89 conflitos: 1 de deslocamento/redução
Estado 90 conflitos: 1 de deslocamento/redução
Estado 91 conflitos: 1 de deslocamento/redução
Estado 92 conflitos: 1 de deslocamento/redução
Estado 93 conflitos: 1 de deslocamento/redução
Estado 94 conflitos: 1 de deslocamento/redução
Estado 95 conflitos: 1 de deslocamento/redução
Estado 96 conflitos: 1 de deslocamento/redução
Estado 97 conflitos: 1 de deslocamento/redução
Estado 98 conflitos: 1 de deslocamento/redução
Estado 99 conflitos: 1 de deslocamento/redução
Estado 100 conflitos: 1 de deslocamento/redução
Estado 101 conflitos: 1 de deslocamento/redução
Estado 102 conflitos: 69 de deslocamento/redução
Estado 107 conflitos: 1 de deslocamento/redução
Estado 108 conflitos: 55 de deslocamento/redução
Estado 123 conflitos: 1 de deslocamento/redução
Estado 124 conflitos: 55 de deslocamento/redução
Estado 125 conflitos: 1 de deslocamento/redução
Estado 127 conflitos: 3 de deslocamento/redução
Estado 128 conflitos: 1 de deslocamento/redução
Estado 130 conflitos: 55 de deslocamento/redução
Estado 131 conflitos: 55 de deslocamento/redução
Estado 132 conflitos: 55 de deslocamento/redução
Estado 133 conflitos: 55 de deslocamento/redução
Estado 134 conflitos: 55 de deslocamento/redução
Estado 135 conflitos: 55 de deslocamento/redução
Estado 136 conflitos: 55 de deslocamento/redução
Estado 137 conflitos: 55 de deslocamento/redução
Estado 138 conflitos: 55 de deslocamento/redução
Estado 139 conflitos: 55 de deslocamento/redução
Estado 140 conflitos: 55 de deslocamento/redução
Estado 141 conflitos: 55 de deslocamento/redução
Estado 142 conflitos: 55 de deslocamento/redução
Estado 143 conflitos: 55 de deslocamento/redução
Estado 144 conflitos: 55 de deslocamento/redução
Estado 168 conflitos: 55 de deslocamento/redução
Estado 169 conflitos: 16 de deslocamento/redução
Estado 170 conflitos: 1 de deslocamento/redução
Estado 171 conflitos: 1 de deslocamento/redução
Estado 172 conflitos: 1 de deslocamento/redução
Estado 173 conflitos: 1 de deslocamento/redução
Estado 175 conflitos: 15 de deslocamento/redução
Estado 191 conflitos: 15 de deslocamento/redução
Estado 195 conflitos: 3 de deslocamento/redução
Estado 196 conflitos: 3 de deslocamento/redução
Estado 197 conflitos: 3 de deslocamento/redução
Estado 198 conflitos: 3 de deslocamento/redução
Estado 199 conflitos: 3 de deslocamento/redução
Estado 200 conflitos: 3 de deslocamento/redução
Estado 201 conflitos: 15 de deslocamento/redução
Estado 202 conflitos: 15 de deslocamento/redução
Estado 203 conflitos: 3 de deslocamento/redução
Estado 204 conflitos: 3 de deslocamento/redução
Estado 205 conflitos: 3 de deslocamento/redução
Estado 206 conflitos: 15 de deslocamento/redução
Estado 207 conflitos: 3 de deslocamento/redução
Estado 208 conflitos: 3 de deslocamento/redução
Estado 209 conflitos: 3 de deslocamento/redução
Estado 213 conflitos: 1 de deslocamento/redução
Estado 220 conflitos: 1 de deslocamento/redução
Estado 221 conflitos: 1 de deslocamento/redução
Estado 223 conflitos: 1 de deslocamento/redução
Estado 224 conflitos: 1 de deslocamento/redução
Estado 225 conflitos: 1 de deslocamento/redução
Estado 226 conflitos: 1 de deslocamento/redução
Estado 227 conflitos: 1 de deslocamento/redução
Estado 228 conflitos: 1 de deslocamento/redução
Estado 229 conflitos: 1 de deslocamento/redução
Estado 230 conflitos: 1 de deslocamento/redução
Estado 231 conflitos: 1 de deslocamento/redução
Estado 233 conflitos: 1 de deslocamento/redução
Estado 234 conflitos: 3 de deslocamento/redução, 74 de redução/redução
Estado 235 conflitos: 55 de deslocamento/redução
Estado 241 conflitos: 1 de deslocamento/redução
Estado 257 conflitos: 1 de deslocamento/redução
Estado 259 conflitos: 1 de deslocamento/redução
Estado 274 conflitos: 3 de deslocamento/redução
Estado 276 conflitos: 1 de deslocamento/redução
Estado 278 conflitos: 1 de deslocamento/redução
Estado 279 conflitos: 1 de deslocamento/redução
Estado 280 conflitos: 1 de deslocamento/redução
Estado 281 conflitos: 55 de deslocamento/redução
Estado 285 conflitos: 55 de deslocamento/redução
Estado 297 conflitos: 1 de deslocamento/redução
Estado 298 conflitos: 1 de deslocamento/redução
Estado 299 conflitos: 1 de deslocamento/redução
Estado 304 conflitos: 15 de deslocamento/redução
Estado 306 conflitos: 1 de deslocamento/redução
Estado 309 conflitos: 15 de deslocamento/redução
Estado 311 conflitos: 1 de deslocamento/redução
Estado 313 conflitos: 1 de deslocamento/redução
Estado 318 conflitos: 1 de deslocamento/redução
Estado 320 conflitos: 1 de deslocamento/redução
Estado 323 conflitos: 55 de deslocamento/redução
Estado 326 conflitos: 55 de deslocamento/redução
Estado 330 conflitos: 1 de deslocamento/redução
Estado 337 conflitos: 15 de deslocamento/redução
Estado 340 conflitos: 15 de deslocamento/redução
Estado 346 conflitos: 1 de deslocamento/redução
Estado 347 conflitos: 1 de deslocamento/redução
Estado 348 conflitos: 55 de deslocamento/redução
Estado 349 conflitos: 55 de deslocamento/redução
Estado 353 conflitos: 15 de deslocamento/redução
Estado 354 conflitos: 15 de deslocamento/redução
Estado 356 conflitos: 1 de deslocamento/redução
Estado 358 conflitos: 1 de deslocamento/redução
Estado 362 conflitos: 1 de deslocamento/redução
Estado 364 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: input "end of file"

    1 input: expression
    2      | error '\n'

    3 expression: number
    4           | function
    5           | command
    6           | assigment
    7           | arithmetic
    8           | logical
    9           | relacional
   10           | "(" expression ")"
   11           | attribute
   12           | variable
   13           | formula

   14 number: NUMD
   15       | NUMH

   16 arithmetic: expression "+" expression
   17           | expression "-" expression
   18           | expression "/" expression
   19           | expression "*" expression
   20           | expression "^" expression
   21           | "-" expression
   22           | mathMIN "(" expression "," expression ")"
   23           | mathMAX "(" expression "," expression ")"

   24 logical: expression oAND expression
   25        | expression oOR expression
   26        | expression oNAND expression
   27        | expression oXOR expression
   28        | oNOT expression

   29 relacional: expression "<" expression
   30           | expression ">" expression
   31           | expression oLE expression
   32           | expression oGE expression
   33           | expression oEQ expression
   34           | expression oNE expression

   35 command: commandIF
   36        | commandFOR

   37 commandIF: cIF expression expression cELSE expression
   38          | cIF expression expression

   39 commandFOR: cFOR variable "=" expression cTO expression cDO assigment
   40           | cFOR attribute "=" expression cTO expression cDO assigment

   41 function: mathFunction
   42         | trigonFunction
   43         | probFunction
   44         | kernelFunction
   45         | elementFunction
   46         | pluginFunction
   47         | userFunction

   48 kernelFunction: fTNOW
   49               | fTFIN
   50               | fMAXREP
   51               | fNUMREP
   52               | fIDENT
   53               | simulEntitiesWIP

   54 elementFunction: ε
   55                | fTAVG "(" CSTAT ")"
   56                | fCOUNT "(" COUNTER ")"

   57 trigonFunction: fSIN "(" expression ")"
   58               | fCOS "(" expression ")"

   59 mathFunction: fROUND "(" expression ")"
   60             | fFRAC "(" expression ")"
   61             | fTRUNC "(" expression ")"
   62             | fEXP "(" expression ")"
   63             | fSQRT "(" expression ")"
   64             | fLOG "(" expression ")"
   65             | fLN "(" expression ")"
   66             | fMOD "(" expression "," expression ")"

   67 probFunction: fRND1
   68             | fEXPO "(" expression ")"
   69             | fNORM "(" expression "," expression ")"
   70             | fUNIF "(" expression "," expression ")"
   71             | fWEIB "(" expression "," expression ")"
   72             | fLOGN "(" expression "," expression ")"
   73             | fGAMM "(" expression "," expression ")"
   74             | fERLA "(" expression "," expression ")"
   75             | fTRIA "(" expression "," expression "," expression ")"
   76             | fBETA "(" expression "," expression "," expression "," expression ")"
   77             | fDISC "(" listaparm ")"

   78 userFunction: "USER" "(" expression ")"

   79 listaparm: listaparm "," expression "," expression
   80          | expression "," expression

   81 attribute: ATRIB
   82          | ATRIB "[" expression "]"
   83          | ATRIB "[" expression "," expression "]"
   84          | ATRIB "[" expression "," expression "," expression "]"

   85 variable: VARI
   86         | VARI "[" expression "]"
   87         | VARI "[" expression "," expression "]"
   88         | VARI "[" expression "," expression "," expression "]"

   89 formula: FORM
   90        | FORM "[" expression "]"
   91        | FORM "[" expression "," expression "]"
   92        | FORM "[" expression "," expression "," expression "]"

   93 assigment: ATRIB "=" expression
   94          | ATRIB "[" expression "]" "=" expression
   95          | ATRIB "[" expression "," expression "]" "=" expression
   96          | ATRIB "[" expression "," expression "," expression "]" "=" expression
   97          | VARI "=" expression
   98          | VARI "[" expression "]" "=" expression
   99          | VARI "[" expression "," expression "]" "=" expression
  100          | VARI "[" expression "," expression "," expression "]" "=" expression

  101 pluginFunction: CTEZERO
  102               | fNQ "(" QUEUE ")"
  103               | fLASTINQ "(" QUEUE ")"
  104               | fFIRSTINQ "(" QUEUE ")"
  105               | fSAQUE "(" QUEUE "," ATRIB ")"
  106               | fAQUE "(" QUEUE "," NUMD "," ATRIB ")"
  107               | fMR "(" RESOURCE ")"
  108               | fNR "(" RESOURCE ")"
  109               | fRESSEIZES "(" RESOURCE ")"
  110               | fSTATE "(" RESOURCE ")"
  111               | fIRF "(" RESOURCE ")"
  112               | fSETSUM "(" SET ")"
  113               | fNUMSET "(" SET ")"


Terminais, com as regras onde eles aparecem

    "end of file" (0) 0
    '\n' (10) 2
    error (256) 2
    NUMD <obj_t> (258) 14 106
    NUMH <obj_t> (259) 15
    CTEZERO <obj_t> (260) 101
    oLE <obj_t> (261) 31
    oGE <obj_t> (262) 32
    oEQ <obj_t> (263) 33
    oNE <obj_t> (264) 34
    oAND <obj_t> (265) 24
    oOR <obj_t> (266) 25
    oNAND <obj_t> (267) 26
    oXOR <obj_t> (268) 27
    oNOT <obj_t> (269) 28
    fSIN <obj_t> (270) 57
    fCOS <obj_t> (271) 58
    fROUND <obj_t> (272) 59
    fMOD <obj_t> (273) 66
    fTRUNC <obj_t> (274) 61
    fFRAC <obj_t> (275) 60
    fEXP <obj_t> (276) 62
    fSQRT <obj_t> (277) 63
    fLOG <obj_t> (278) 64
    fLN <obj_t> (279) 65
    mathMIN <obj_t> (280) 22
    mathMAX <obj_t> (281) 23
    fVAL <obj_t> (282)
    fEVAL <obj_t> (283)
    fLENG <obj_t> (284)
    fRND1 <obj_t> (285) 67
    fEXPO <obj_t> (286) 68
    fNORM <obj_t> (287) 69
    fUNIF <obj_t> (288) 70
    fWEIB <obj_t> (289) 71
    fLOGN <obj_t> (290) 72
    fGAMM <obj_t> (291) 73
    fERLA <obj_t> (292) 74
    fTRIA <obj_t> (293) 75
    fBETA <obj_t> (294) 76
    fDISC <obj_t> (295) 77
    fTNOW <obj_t> (296) 48
    fTFIN <obj_t> (297) 49
    fMAXREP <obj_t> (298) 50
    fNUMREP <obj_t> (299) 51
    fIDENT <obj_t> (300) 52
    simulEntitiesWIP <obj_t> (301) 53
    cIF <obj_t> (302) 37 38
    cELSE <obj_t> (303) 37
    cFOR <obj_t> (304) 39 40
    cTO <obj_t> (305) 39 40
    cDO <obj_t> (306) 39 40
    ATRIB <obj_t> (307) 81 82 83 84 93 94 95 96 105 106
    CSTAT <obj_t> (308) 55
    COUNTER <obj_t> (309) 56
    fTAVG <obj_t> (310) 55
    fCOUNT <obj_t> (311) 56
    ILLEGAL <obj_t> (312)
    RESOURCE <obj_t> (313) 107 108 109 110 111
    fNR <obj_t> (314) 108
    fMR <obj_t> (315) 107
    fIRF <obj_t> (316) 111
    fRESSEIZES <obj_t> (317) 109
    fSTATE <obj_t> (318) 110
    fSETSUM <obj_t> (319) 112
    fRESUTIL <obj_t> (320)
    QUEUE <obj_t> (321) 102 103 104 105 106
    fNQ <obj_t> (322) 102
    fFIRSTINQ <obj_t> (323) 104
    fLASTINQ <obj_t> (324) 103
    fSAQUE <obj_t> (325) 105
    fAQUE <obj_t> (326) 106
    fENTATRANK <obj_t> (327)
    SET <obj_t> (328) 112 113
    fNUMSET <obj_t> (329) 113
    VARI <obj_t> (330) 85 86 87 88 97 98 99 100
    FORM <obj_t> (331) 89 90 91 92
    fNUMGR <obj_t> (332)
    fATRGR <obj_t> (333)
    "(" (334) 10 22 23 55 56 57 58 59 60 61 62 63 64 65 66 68 69 70 71 72 73 74 75 76 77 78 102 103 104 105 106 107 108 109 110 111 112 113
    ")" (335) 10 22 23 55 56 57 58 59 60 61 62 63 64 65 66 68 69 70 71 72 73 74 75 76 77 78 102 103 104 105 106 107 108 109 110 111 112 113
    "[" (336) 82 83 84 86 87 88 90 91 92 94 95 96 98 99 100
    "]" (337) 82 83 84 86 87 88 90 91 92 94 95 96 98 99 100
    "+" (338) 16
    "-" (339) 17 21
    "*" (340) 19
    "^" (341) 20
    "/" (342) 18
    "<" (343) 29
    ">" (344) 30
    "=" (345) 39 40 93 94 95 96 97 98 99 100
    "," (346) 22 23 66 69 70 71 72 73 74 75 76 79 80 83 84 87 88 91 92 95 96 99 100 105 106
    NEG (347)
    "USER" (348) 78


Não terminais com as regras onde eles aparecem

    $accept (95)
        à esquerda: 0
    input <obj_t> (96)
        à esquerda: 1 2
        à direita: 0
    expression <obj_t> (97)
        à esquerda: 3 4 5 6 7 8 9 10 11 12 13
        à direita: 1 10 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 37 38 39 40 57 58 59 60 61 62 63 64 65 66 68 69 70 71 72 73 74 75 76 78 79 80 82 83 84 86 87 88 90 91 92 93 94 95 96 97 98 99 100
    number <obj_t> (98)
        à esquerda: 14 15
        à direita: 3
    arithmetic <obj_t> (99)
        à esquerda: 16 17 18 19 20 21 22 23
        à direita: 7
    logical <obj_t> (100)
        à esquerda: 24 25 26 27 28
        à direita: 8
    relacional <obj_t> (101)
        à esquerda: 29 30 31 32 33 34
        à direita: 9
    command <obj_t> (102)
        à esquerda: 35 36
        à direita: 5
    commandIF <obj_t> (103)
        à esquerda: 37 38
        à direita: 35
    commandFOR <obj_t> (104)
        à esquerda: 39 40
        à direita: 36
    function <obj_t> (105)
        à esquerda: 41 42 43 44 45 46 47
        à direita: 4
    kernelFunction <obj_t> (106)
        à esquerda: 48 49 50 51 52 53
        à direita: 44
    elementFunction <obj_t> (107)
        à esquerda: 54 55 56
        à direita: 45
    trigonFunction <obj_t> (108)
        à esquerda: 57 58
        à direita: 42
    mathFunction <obj_t> (109)
        à esquerda: 59 60 61 62 63 64 65 66
        à direita: 41
    probFunction <obj_t> (110)
        à esquerda: 67 68 69 70 71 72 73 74 75 76 77
        à direita: 43
    userFunction <obj_t> (111)
        à esquerda: 78
        à direita: 47
    listaparm <obj_t> (112)
        à esquerda: 79 80
        à direita: 77 79
    attribute <obj_t> (113)
        à esquerda: 81 82 83 84
        à direita: 11 40
    variable <obj_t> (114)
        à esquerda: 85 86 87 88
        à direita: 12 39
    formula <obj_t> (115)
        à esquerda: 89 90 91 92
        à direita: 13
    assigment <obj_t> (116)
        à esquerda: 93 94 95 96 97 98 99 100
        à direita: 6 39 40
    pluginFunction <obj_t> (117)
        à esquerda: 101 102 103 104 105 106 107 108 109 110 111 112 113
        à direita: 46


Estado 0

    0 $accept: • input "end of file"

    error             deslocar, e ir ao estado 1
    NUMD              deslocar, e ir ao estado 2
    NUMH              deslocar, e ir ao estado 3
    CTEZERO           deslocar, e ir ao estado 4
    oNOT              deslocar, e ir ao estado 5
    fSIN              deslocar, e ir ao estado 6
    fCOS              deslocar, e ir ao estado 7
    fROUND            deslocar, e ir ao estado 8
    fMOD              deslocar, e ir ao estado 9
    fTRUNC            deslocar, e ir ao estado 10
    fFRAC             deslocar, e ir ao estado 11
    fEXP              deslocar, e ir ao estado 12
    fSQRT             deslocar, e ir ao estado 13
    fLOG              deslocar, e ir ao estado 14
    fLN               deslocar, e ir ao estado 15
    mathMIN           deslocar, e ir ao estado 16
    mathMAX           deslocar, e ir ao estado 17
    fRND1             deslocar, e ir ao estado 18
    fEXPO             deslocar, e ir ao estado 19
    fNORM             deslocar, e ir ao estado 20
    fUNIF             deslocar, e ir ao estado 21
    fWEIB             deslocar, e ir ao estado 22
    fLOGN             deslocar, e ir ao estado 23
    fGAMM             deslocar, e ir ao estado 24
    fERLA             deslocar, e ir ao estado 25
    fTRIA             deslocar, e ir ao estado 26
    fBETA             deslocar, e ir ao estado 27
    fDISC             deslocar, e ir ao estado 28
    fTNOW             deslocar, e ir ao estado 29
    fTFIN             deslocar, e ir ao estado 30
    fMAXREP           deslocar, e ir ao estado 31
    fNUMREP           deslocar, e ir ao estado 32
    fIDENT            deslocar, e ir ao estado 33
    simulEntitiesWIP  deslocar, e ir ao estado 34
    cIF               deslocar, e ir ao estado 35
    cFOR              deslocar, e ir ao estado 36
    ATRIB             deslocar, e ir ao estado 37
    fTAVG             deslocar, e ir ao estado 38
    fCOUNT            deslocar, e ir ao estado 39
    fNR               deslocar, e ir ao estado 40
    fMR               deslocar, e ir ao estado 41
    fIRF              deslocar, e ir ao estado 42
    fRESSEIZES        deslocar, e ir ao estado 43
    fSTATE            deslocar, e ir ao estado 44
    fSETSUM           deslocar, e ir ao estado 45
    fNQ               deslocar, e ir ao estado 46
    fFIRSTINQ         deslocar, e ir ao estado 47
    fLASTINQ          deslocar, e ir ao estado 48
    fSAQUE            deslocar, e ir ao estado 49
    fAQUE             deslocar, e ir ao estado 50
    fNUMSET           deslocar, e ir ao estado 51
    VARI              deslocar, e ir ao estado 52
    FORM              deslocar, e ir ao estado 53
    "("               deslocar, e ir ao estado 54
    "-"               deslocar, e ir ao estado 55
    "USER"            deslocar, e ir ao estado 56

    "end of file"  reduzir usando a regra 54 (elementFunction)
    oLE            reduzir usando a regra 54 (elementFunction)
    oGE            reduzir usando a regra 54 (elementFunction)
    oEQ            reduzir usando a regra 54 (elementFunction)
    oNE            reduzir usando a regra 54 (elementFunction)
    oAND           reduzir usando a regra 54 (elementFunction)
    oOR            reduzir usando a regra 54 (elementFunction)
    oNAND          reduzir usando a regra 54 (elementFunction)
    oXOR           reduzir usando a regra 54 (elementFunction)
    "+"            reduzir usando a regra 54 (elementFunction)
    "-"            [reduzir usando a regra 54 (elementFunction)]
    "*"            reduzir usando a regra 54 (elementFunction)
    "^"            reduzir usando a regra 54 (elementFunction)
    "/"            reduzir usando a regra 54 (elementFunction)
    "<"            reduzir usando a regra 54 (elementFunction)
    ">"            reduzir usando a regra 54 (elementFunction)

    input            ir ao estado 57
    expression       ir ao estado 58
    number           ir ao estado 59
    arithmetic       ir ao estado 60
    logical          ir ao estado 61
    relacional       ir ao estado 62
    command          ir ao estado 63
    commandIF        ir ao estado 64
    commandFOR       ir ao estado 65
    function         ir ao estado 66
    kernelFunction   ir ao estado 67
    elementFunction  ir ao estado 68
    trigonFunction   ir ao estado 69
    mathFunction     ir ao estado 70
    probFunction     ir ao estado 71
    userFunction     ir ao estado 72
    attribute        ir ao estado 73
    variable         ir ao estado 74
    formula          ir ao estado 75
    assigment        ir ao estado 76
    pluginFunction   ir ao estado 77


Estado 1

    2 input: error • '\n'

    '\n'  deslocar, e ir ao estado 78


Estado 2

   14 number: NUMD •

    $padrão  reduzir usando a regra 14 (number)


Estado 3

   15 number: NUMH •

    $padrão  reduzir usando a regra 15 (number)


Estado 4

  101 pluginFunction: CTEZERO •

    $padrão  reduzir usando a regra 101 (pluginFunction)


Estado 5

   28 logical: oNOT • expression

    NUMD              deslocar, e ir ao estado 2
    NUMH              deslocar, e ir ao estado 3
    CTEZERO           deslocar, e ir ao estado 4
    oNOT              deslocar, e ir ao estado 5
    fSIN              deslocar, e ir ao estado 6
    fCOS              deslocar, e ir ao estado 7
    fROUND            deslocar, e ir ao estado 8
    fMOD              deslocar, e ir ao estado 9
    fTRUNC            deslocar, e ir ao estado 10
    fFRAC             deslocar, e ir ao estado 11
    fEXP              deslocar, e ir ao estado 12
    fSQRT             deslocar, e ir ao estado 13
    fLOG              deslocar, e ir ao estado 14
    fLN               deslocar, e ir ao estado 15
    mathMIN           deslocar, e ir ao estado 16
    mathMAX           deslocar, e ir ao estado 17
    fRND1             deslocar, e ir ao estado 18
    fEXPO             deslocar, e ir ao estado 19
    fNORM             deslocar, e ir ao estado 20
    fUNIF             deslocar, e ir ao estado 21
    fWEIB             deslocar, e ir ao estado 22
    fLOGN             deslocar, e ir ao estado 23
    fGAMM             deslocar, e ir ao estado 24
    fERLA             deslocar, e ir ao estado 25
    fTRIA             deslocar, e ir ao estado 26
    fBETA             deslocar, e ir ao estado 27
    fDISC             deslocar, e ir ao estado 28
    fTNOW             deslocar, e ir ao estado 29
    fTFIN             deslocar, e ir ao estado 30
    fMAXREP           deslocar, e ir ao estado 31
    fNUMREP           deslocar, e ir ao estado 32
    fIDENT            deslocar, e ir ao estado 33
    simulEntitiesWIP  deslocar, e ir ao estado 34
    cIF               deslocar, e ir ao estado 35
    cFOR              deslocar, e ir ao estado 36
    ATRIB             deslocar, e ir ao estado 37
    fTAVG             deslocar, e ir ao estado 38
    fCOUNT            deslocar, e ir ao estado 39
    fNR               deslocar, e ir ao estado 40
    fMR               deslocar, e ir ao estado 41
    fIRF              deslocar, e ir ao estado 42
    fRESSEIZES        deslocar, e ir ao estado 43
    fSTATE            deslocar, e ir ao estado 44
    fSETSUM           deslocar, e ir ao estado 45
    fNQ               deslocar, e ir ao estado 46
    fFIRSTINQ         deslocar, e ir ao estado 47
    fLASTINQ          deslocar, e ir ao estado 48
    fSAQUE            deslocar, e ir ao estado 49
    fAQUE             deslocar, e ir ao estado 50
    fNUMSET           deslocar, e ir ao estado 51
    VARI              deslocar, e ir ao estado 52
    FORM              deslocar, e ir ao estado 53
    "("               deslocar, e ir ao estado 54
    "-"               deslocar, e ir ao estado 55
    "USER"            deslocar, e ir ao estado 56

    NUMD              [reduzir usando a regra 54 (elementFunction)]
    NUMH              [reduzir usando a regra 54 (elementFunction)]
    CTEZERO           [reduzir usando a regra 54 (elementFunction)]
    oNOT              [reduzir usando a regra 54 (elementFunction)]
    fSIN              [reduzir usando a regra 54 (elementFunction)]
    fCOS              [reduzir usando a regra 54 (elementFunction)]
    fROUND            [reduzir usando a regra 54 (elementFunction)]
    fMOD              [reduzir usando a regra 54 (elementFunction)]
    fTRUNC            [reduzir usando a regra 54 (elementFunction)]
    fFRAC             [reduzir usando a regra 54 (elementFunction)]
    fEXP              [reduzir usando a regra 54 (elementFunction)]
    fSQRT             [reduzir usando a regra 54 (elementFunction)]
    fLOG              [reduzir usando a regra 54 (elementFunction)]
    fLN               [reduzir usando a regra 54 (elementFunction)]
    mathMIN           [reduzir usando a regra 54 (elementFunction)]
    mathMAX           [reduzir usando a regra 54 (elementFunction)]
    fRND1             [reduzir usando a regra 54 (elementFunction)]
    fEXPO             [reduzir usando a regra 54 (elementFunction)]
    fNORM             [reduzir usando a regra 54 (elementFunction)]
    fUNIF             [reduzir usando a regra 54 (elementFunction)]
    fWEIB             [reduzir usando a regra 54 (elementFunction)]
    fLOGN             [reduzir usando a regra 54 (elementFunction)]
    fGAMM             [reduzir usando a regra 54 (elementFunction)]
    fERLA             [reduzir usando a regra 54 (elementFunction)]
    fTRIA             [reduzir usando a regra 54 (elementFunction)]
    fBETA             [reduzir usando a regra 54 (elementFunction)]
    fDISC             [reduzir usando a regra 54 (elementFunction)]
    fTNOW             [reduzir usando a regra 54 (elementFunction)]
    fTFIN             [reduzir usando a regra 54 (elementFunction)]
    fMAXREP           [reduzir usando a regra 54 (elementFunction)]
    fNUMREP           [reduzir usando a regra 54 (elementFunction)]
    fIDENT            [reduzir usando a regra 54 (elementFunction)]
    simulEntitiesWIP  [reduzir usando a regra 54 (elementFunction)]
    cIF               [reduzir usando a regra 54 (elementFunction)]
    cFOR              [reduzir usando a regra 54 (elementFunction)]
    ATRIB             [reduzir usando a regra 54 (elementFunction)]
    fTAVG             [reduzir usando a regra 54 (elementFunction)]
    fCOUNT            [reduzir usando a regra 54 (elementFunction)]
    fNR               [reduzir usando a regra 54 (elementFunction)]
    fMR               [reduzir usando a regra 54 (elementFunction)]
    fIRF              [reduzir usando a regra 54 (elementFunction)]
    fRESSEIZES        [reduzir usando a regra 54 (elementFunction)]
    fSTATE            [reduzir usando a regra 54 (elementFunction)]
    fSETSUM           [reduzir usando a regra 54 (elementFunction)]
    fNQ               [reduzir usando a regra 54 (elementFunction)]
    fFIRSTINQ         [reduzir usando a regra 54 (elementFunction)]
    fLASTINQ          [reduzir usando a regra 54 (elementFunction)]
    fSAQUE            [reduzir usando a regra 54 (elementFunction)]
    fAQUE             [reduzir usando a regra 54 (elementFunction)]
    fNUMSET           [reduzir usando a regra 54 (elementFunction)]
    VARI              [reduzir usando a regra 54 (elementFunction)]
    FORM              [reduzir usando a regra 54 (elementFunction)]
    "("               [reduzir usando a regra 54 (elementFunction)]
    "-"               [reduzir usando a regra 54 (elementFunction)]
    "USER"            [reduzir usando a regra 54 (elementFunction)]
    $padrão           reduzir usando a regra 54 (elementFunction)

    expression       ir ao estado 79
    number           ir ao estado 59
    arithmetic       ir ao estado 60
    logical          ir ao estado 61
    relacional       ir ao estado 62
    command          ir ao estado 63
    commandIF        ir ao estado 64
    commandFOR       ir ao estado 65
    function         ir ao estado 66
    kernelFunction   ir ao estado 67
    elementFunction  ir ao estado 68
    trigonFunction   ir ao estado 69
    mathFunction     ir ao estado 70
    probFunction     ir ao estado 71
    userFunction     ir ao estado 72
    attribute        ir ao estado 73
    variable         ir ao estado 74
    formula          ir ao estado 75
    assigment        ir ao estado 76
    pluginFunction   ir ao estado 77


Estado 6

   57 trigonFunction: fSIN • "(" expression ")"

    "("  deslocar, e ir ao estado 80


Estado 7

   58 trigonFunction: fCOS • "(" expression ")"

    "("  deslocar, e ir ao estado 81


Estado 8

   59 mathFunction: fROUND • "(" expression ")"

    "("  deslocar, e ir ao estado 82


Estado 9

   66 mathFunction: fMOD • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 83


Estado 10

   61 mathFunction: fTRUNC • "(" expression ")"

    "("  deslocar, e ir ao estado 84


Estado 11

   60 mathFunction: fFRAC • "(" expression ")"

    "("  deslocar, e ir ao estado 85


Estado 12

   62 mathFunction: fEXP • "(" expression ")"

    "("  deslocar, e ir ao estado 86


Estado 13

   63 mathFunction: fSQRT • "(" expression ")"

    "("  deslocar, e ir ao estado 87


Estado 14

   64 mathFunction: fLOG • "(" expression ")"

    "("  deslocar, e ir ao estado 88


Estado 15

   65 mathFunction: fLN • "(" expression ")"

    "("  deslocar, e ir ao estado 89


Estado 16

   22 arithmetic: mathMIN • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 90


Estado 17

   23 arithmetic: mathMAX • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 91


Estado 18

   67 probFunction: fRND1 •

    $padrão  reduzir usando a regra 67 (probFunction)


Estado 19

   68 probFunction: fEXPO • "(" expression ")"

    "("  deslocar, e ir ao estado 92


Estado 20

   69 probFunction: fNORM • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 93


Estado 21

   70 probFunction: fUNIF • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 94


Estado 22

   71 probFunction: fWEIB • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 95


Estado 23

   72 probFunction: fLOGN • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 96


Estado 24

   73 probFunction: fGAMM • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 97


Estado 25

   74 probFunction: fERLA • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 98


Estado 26

   75 probFunction: fTRIA • "(" expression "," expression "," expression ")"

    "("  deslocar, e ir ao estado 99


Estado 27

   76 probFunction: fBETA • "(" expression "," expression "," expression "," expression ")"

    "("  deslocar, e ir ao estado 100


Estado 28

   77 probFunction: fDISC • "(" listaparm ")"

    "("  deslocar, e ir ao estado 101


Estado 29

   48 kernelFunction: fTNOW •

    $padrão  reduzir usando a regra 48 (kernelFunction)


Estado 30

   49 kernelFunction: fTFIN •

    $padrão  reduzir usando a regra 49 (kernelFunction)


Estado 31

   50 kernelFunction: fMAXREP •

    $padrão  reduzir usando a regra 50 (kernelFunction)


Estado 32

   51 kernelFunction: fNUMREP •

    $padrão  reduzir usando a regra 51 (kernelFunction)


Estado 33

   52 kernelFunction: fIDENT •

    $padrão  reduzir usando a regra 52 (kernelFunction)


Estado 34

   53 kernelFunction: simulEntitiesWIP •

    $padrão  reduzir usando a regra 53 (kernelFunction)


Estado 35

   37 commandIF: cIF • expression expression cELSE expression
   38          | cIF • expression expression
